2006-01-11  Ulrich Drepper  <drepper@redhat.com>

	* libio/genops.c (_IO_unbuffer_write): Give concurrently running
	threads the chance to work correctly by trying to lock the stream.
	If this does not work, proceed without locking.

2006-01-10  Ulrich Drepper  <drepper@redhat.com>

	* libio/genops.c (_IO_unbuffer_write): Don't always free the
	buffer.  This is not necessary except in debug mode.  If we don't
	free the buffer but the FILE structure to a list.
	(buffer_free): New function.  Free buffers or tell _IO_unbuffer_write
	to do so.
	* libio/libio.h (struct _IO_FILE): Add new members to keep track
	of which buffers have to be freed.

	* iconv/gconv_cache.c (free_mem): Don't call munmap if gconv_cache
	is NULL.

2005-10-14  Paul Eggert  <eggert@cs.ucla.edu>

	* malloc/obstack.c: Fix old comments.  Update FSF snail mail address.
	* malloc/obstack.h: Likewise.

	[BZ #321]
	Fix portability bugs encountered when porting to Itanium.
	* malloc/obstack.h (obstack_empty_p, obstack_finish): Do not
	assume that the "contents" member is suitably aligned.  It is
	not, for some hosts and alignments: e.g., Itanium, long-double.
	* malloc/obstack.c (_obstack_begin, _obstack_begin_1,
	_obstack_newchunk): Likewise.
	* malloc/obstack.c: Include <stddef.h>, for size_t.
	Include <inttypes.h>, <stdint.h> if needed and available.
	(DEFAULT_ALIGNMENT): Now an enum constant, not a macro.
	Use C89 offsetof rather than K&R trick.
	Use the maximum alignment of uintmax_t, long double, void *
	rather than the alignment of double.
	(union fooround): Use uintmax_t, long double, void * members
	rather than just long and double.

	[BZ #321]
	Fix portability bugs encountered when porting to the IBM iSeries,
	where pointers are 256 bits wide and no integers are that wide.
	* malloc/obstack.h (__PTR_TO_INT, __INT_TO_PTR): Remove.
	All uses changed to:
	(__BPTR_ALIGN, __PTR_ALIGN): New macros.
	(struct _obstack_chunk.temp): Change from int to a union
	of pointer and int.  All uses changed.
