@@ -10,6 +10,7 @@ extern int __sched_setscheduler (__pid_t __pid, int __policy,
 libc_hidden_proto (__sched_setscheduler)
 extern int __sched_getscheduler (__pid_t __pid);
 extern int __sched_yield (void);
+libc_hidden_proto (__sched_yield)
 extern int __sched_get_priority_max (int __algorithm);
 extern int __sched_get_priority_min (int __algorithm);
 extern int __sched_rr_get_interval (__pid_t __pid, struct timespec *__t);
