@@ -31,6 +31,8 @@ extern __inline__ int __mknod (__const char *__path, __mode_t __mode,
 }
 libc_hidden_proto (__xmknodat)
 
+libc_hidden_proto (__fxstatat64)
+
 
 /* The `stat', `fstat', `lstat' functions have to be handled special since
    even while not compiling the library with optimization calls to these
